[package]
name = "poly-reddit"
description = "Reddit client for Poly — HTML-scraping backend against old.reddit.com (dev-plugins gated)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = [
    "dep:dioxus",
    "dep:async-trait",
    "dep:futures",
    "dep:tokio",
    "dep:serde",
    "dep:serde_json",
    "dep:chrono",
    "dep:uuid",
    "dep:thiserror",
    "dep:tracing",
    "dep:reqwest",
    "dep:scraper",
    "dep:regex",
    "dep:serde_urlencoded",
    "dep:poly-host-bridge",
]

[dependencies]
poly-ui-macros = { workspace = true }
poly-client = { workspace = true }
poly-host-bridge = { workspace = true, optional = true }
dioxus = { workspace = true, optional = true }

# Native-only dependencies (feature-gated)
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["js"] }
futures = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
scraper = { version = "0.20", optional = true }
regex = { version = "1", optional = true }
# Form-encoded body building. reqwest's `.form()` is workspace-disabled
# (default-features = false drops serde_urlencoded), so we encode manually.
serde_urlencoded = { version = "0.7", optional = true }

# scraper → ahash transitively pulls getrandom 0.3 on wasm32 targets;
# the wasm_js feature must be unified through this crate or the WASM
# build fails with `--cfg getrandom_backend="wasm_js"` flagged but no
# wasm_js backend module compiled.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }
poly-test-reddit = { path = "../../servers/test-reddit" }
axum = { workspace = true }

[[test]]
name = "back_and_forth"
path = "tests/back_and_forth.rs"

[lints]
workspace = true
