[package]
name = "poly-stoat"
description = "Stoat (Revolt) messenger client for Poly"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
poly-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
