[package]
name = "poly-stoat"
description = "Stoat (Revolt) messenger client for Poly — builds as native lib or WASM plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = [
    "dep:dioxus",
    "dep:async-trait",
    "dep:futures",
    "dep:tokio",
    "dep:serde",
    "dep:serde_json",
    "dep:chrono",
    "dep:uuid",
    "dep:thiserror",
    "dep:tracing",
    "dep:poly-host-bridge",
    "dep:tokio-tungstenite",
    "dep:tokio-stream",
]

[dependencies]
poly-ui-macros = { workspace = true }
poly-client = { workspace = true }
poly-host-bridge = { workspace = true, optional = true }
dioxus = { workspace = true, optional = true }

# Native-only dependencies (feature-gated)
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["js"] }
futures = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
# Native-only: WebSocket transport (not needed / not compilable for WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

# WASM plugin guest bindings (WASI targets only)
[target.'cfg(target_os = "wasi")'.dependencies]
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "net"] }
futures = { workspace = true }
poly-test-stoat = { path = "../../servers/test-stoat" }
poly-test-common = { path = "../../servers/test-common" }

[[test]]
name = "moderation"
path = "tests/moderation.rs"

[[test]]
name = "back_and_forth"
path = "tests/back_and_forth.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[[test]]
name = "realtime"
path = "tests/realtime.rs"

[[test]]
name = "spec_validation"
path = "tests/spec_validation.rs"

[lints]
workspace = true
