[package]
name = "poly-stoat"
description = "Stoat (Revolt) messenger client for Poly — builds as native lib or WASM plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = [
    "dep:dioxus",
    "dep:async-trait",
    "dep:futures",
    "dep:tokio",
    "dep:serde",
    "dep:chrono",
    "dep:uuid",
    "dep:tracing",
    "dep:poly-host-bridge",
    "dep:tokio-tungstenite",
    "dep:tokio-stream",
]
# Voice transport — Stoat/Vortex WebSocket signaling + Opus encode/decode.
# NATIVE ONLY. WASM builds MUST NOT enable this feature — audiopus links
# against libopus FFI which is unavailable on wasm32-unknown-unknown.
# Requires `native` for the HTTP + WS transport already in that feature set.
# Phase F of plan-voice-video-calls.md.
voice = [
    "native",
    "dep:audiopus",
    "dep:poly-audio-backend",
]

[dependencies]
poly-ui-macros = { workspace = true }
poly-client = { workspace = true }
poly-host-bridge = { workspace = true, optional = true }
dioxus = { workspace = true, optional = true }

# Unconditional — used by voice_common.rs which is cfg-free (compiles on wasm32 too).
thiserror = { workspace = true }
serde_json = { workspace = true }

# Native-only dependencies (feature-gated)
serde = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["js"] }
futures = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
# Native-only: WebSocket transport (not needed / not compilable for WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

# Browser-only deps for the WASM audio playback loop (Phase B.4 of
# plan-stoat-voice-wasm.md). Mirrors the discord voice-bridge pattern.
# web-sys features cover AudioContext + AudioBufferSourceNode for per-user
# speaker playback; wasm-bindgen / wasm-bindgen-futures are needed by
# voice_wasm.rs (B.1) and indirectly by the playback module.
# gloo-net provides browser WebSocket + HTTP for voice_wasm.rs (B.1).
# poly-host-bridge provides OpusClient for /host/codec/opus/* codec sessions.
# tracing and futures are also needed on wasm32 (native has them under the "native" feature).
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = [
    # B.4 — playback (per-user AudioContext + scheduled AudioBufferSourceNode)
    "AudioContext",
    "AudioContextOptions",
    "AudioBuffer",
    "AudioBufferOptions",
    "AudioBufferSourceNode",
    "AudioNode",
    "AudioDestinationNode",
    "AudioScheduledSourceNode",
    # B.3 — mic capture (getUserMedia + MediaStreamTrackProcessor)
    "Navigator",
    "Window",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "AudioData",
    "AudioDataCopyToOptions",
    "ReadableStream",
    "ReadableStreamDefaultReader",
] }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
# tracing compiles on wasm32 (log-facade; no OS deps). Used by voice_wasm*.rs.
tracing = { workspace = true }
# gloo-net: browser WebSocket + HTTP for voice_wasm.rs (B.1 signaling).
gloo-net = { workspace = true, features = ["websocket", "http"] }
# poly-host-bridge: OpusClient for /host/codec/opus/* codec sessions.
poly-host-bridge = { workspace = true }
# futures: StreamExt / SinkExt / channel primitives for voice_wasm.rs.
futures = { workspace = true }

# Voice transport — native only (feature = "voice"). F.1.
# audiopus provides safe Opus FFI via libopus.
# poly-audio-backend provides the AudioBackend trait for mic/speaker I/O.
audiopus = { workspace = true, optional = true }
poly-audio-backend = { workspace = true, optional = true }

# WASM plugin guest bindings (WASI targets only)
[target.'cfg(target_os = "wasi")'.dependencies]
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "net"] }
futures = { workspace = true }
poly-test-stoat = { path = "../../servers/test-stoat" }
poly-test-common = { path = "../../servers/test-common" }

[[test]]
name = "moderation"
path = "tests/moderation.rs"

[[test]]
name = "back_and_forth"
path = "tests/back_and_forth.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[[test]]
name = "realtime"
path = "tests/realtime.rs"

[[test]]
name = "spec_validation"
path = "tests/spec_validation.rs"

[[test]]
name = "version_override"
path = "tests/version_override.rs"

[lints]
workspace = true
