[package]
name = "poly-core"
description = "Shared UI, state, database, i18n, theme, crypto, and sync library for Poly"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["demo"]
stoat = ["dep:poly-stoat"]
matrix = ["dep:poly-matrix"]
discord = ["dep:poly-discord"]
teams = ["dep:poly-teams"]
demo = ["dep:poly-demo"]
native-nav = []                # Back/forward nav buttons (desktop/mobile only, not web)

[dependencies]
# UI
dioxus = { workspace = true }

# Shared client trait
poly-client = { workspace = true }

# Backend clients (feature-gated)
poly-demo = { workspace = true, optional = true }
poly-stoat = { workspace = true, optional = true }
poly-matrix = { workspace = true, optional = true }
poly-discord = { workspace = true, optional = true }
poly-teams = { workspace = true, optional = true }

# Crypto
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
bip39 = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }

# i18n
fluent-bundle = { workspace = true }
fluent-syntax = { workspace = true }
unic-langid = { workspace = true }
sys-locale = { workspace = true }

# Sync client
reqwest = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }

# Native-only: SurrealDB + poly-server client + WASM plugin host (dylib)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surrealdb = { workspace = true, features = ["kv-surrealkv"] }
poly-server-client = { workspace = true }
poly-plugin-host = { workspace = true }

# WASM-only: browser localStorage + getrandom JS backend forwarding.
# rand_core 0.6 (aead, ed25519-dalek) and rand 0.10 each pull a different getrandom
# semver line; both need their WASM JS backend feature enabled or they fail to compile.
# These aliases are defined once in the workspace; no version numbers live here.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = { workspace = true }
getrandom02-js = { workspace = true }
getrandom04-wasm = { workspace = true }

[lints]
workspace = true
