[package]
name = "poly-core"
description = "Shared UI, state, database, i18n, theme, crypto, and sync library for Poly"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["demo", "server", "storage-sqlite"]
stoat = ["dep:poly-stoat"]
matrix = ["dep:poly-matrix"]
discord = ["dep:poly-discord"]
teams = ["dep:poly-teams"]
demo = ["dep:poly-demo"]
server = ["dep:poly-server-client"]
hackernews = []   # wired in when poly-hackernews client lands
lemmy = []        # wired in when poly-lemmy client lands
native-nav = []                     # Back/forward nav buttons (desktop/mobile only, not web)
storage-sqlite = ["dep:sqlite"]
storage-surreal = ["dep:surrealdb"]

[dependencies]
# UI
dioxus = { workspace = true }

# Shared client trait
poly-client = { workspace = true }

# Backend clients (feature-gated)
poly-demo = { workspace = true, optional = true }
poly-stoat = { workspace = true, optional = true }
poly-matrix = { workspace = true, optional = true }
poly-discord = { workspace = true, optional = true }
poly-teams = { workspace = true, optional = true }
poly-server-client = { workspace = true, optional = true }
# poly-hackernews = { workspace = true, optional = true }   # wired in when poly-hackernews client lands
# poly-lemmy = { workspace = true, optional = true }         # wired in when poly-lemmy client lands

# Crypto
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
bip39 = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }

# i18n
fluent-bundle = { workspace = true }
fluent-syntax = { workspace = true }
unic-langid = { workspace = true }
sys-locale = { workspace = true }

# Sync client
reqwest = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
pulldown-cmark = { workspace = true }
ammonia = { workspace = true }

# Audio processing — RNNoise noise cancellation (pure Rust, wasm32-compatible).
# Phase 1: toggle in UI; Phase 3: wire to WebAudio AudioWorklet.
# See docs/phase-voice-plan.md DECISION(V-4).
nnnoiseless = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# Native-only: SQLite by default, SurrealDB when `storage-surreal` is enabled.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlite = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true, features = ["kv-surrealkv"] }
poly-plugin-host = { workspace = true }
poly-server-client = { workspace = true, optional = true, features = [
    "native",
] }

# WASM-only: IndexedDB + getrandom JS backend forwarding + poly-server HTTP client.
# rand_core 0.6 (aead, ed25519-dalek) and rand 0.10 each pull a different getrandom
# semver line; both need their WASM JS backend feature enabled or they fail to compile.
# These aliases are defined once in the workspace; no version numbers live here.
[target.'cfg(target_arch = "wasm32")'.dependencies]
indexed_db_futures = { workspace = true }
getrandom02-js = { workspace = true }
getrandom04-wasm = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
poly-server-client = { workspace = true, optional = true, features = [
    "wasm-http",
] }

[lints]
workspace = true
