[package]
name = "poly-core"
description = "Shared UI, state, database, i18n, theme, crypto, and sync library for Poly"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["demo", "server", "storage-sqlite"]
stoat = ["dep:poly-stoat"]
matrix = ["dep:poly-matrix"]
discord = ["dep:poly-discord"]
# WASM-safe voice transport for the Discord client.
# Enables `voice_bridge::DiscordVoiceBridgeClient` — routes voice through
# /host/voice/* HTTP endpoints instead of the native UDP/Opus pipeline.
# Mutually exclusive with a hypothetical `discord-voice` (native gateway)
# by dep tree: `discord-voice` would pull in audiopus/tungstenite which
# don't compile on wasm32. Enable this in apps/web for the WASM bundle.
discord-voice-bridge = ["discord", "poly-discord/voice-bridge"]
teams = ["dep:poly-teams"]
demo = ["dep:poly-demo"]
server = ["dep:poly-server-client"]
hackernews = ["dep:poly-hackernews"]
lemmy = ["dep:poly-lemmy"]
github = ["dep:poly-github"]
forgejo = ["dep:poly-forgejo"]
reddit = ["dep:poly-reddit"]
native-nav = []                     # Back/forward nav buttons (desktop/mobile only, not web)
storage-sqlite = ["dep:sqlite"]
storage-surreal = ["dep:surrealdb"]
# When set on wasm32, storage operations route through the host bridge
# (`POST /host/kv/*`) to a native daemon that owns the real database file.
# Replaces the IndexedDB backend so apps/web shares one SQLite file with
# apps/desktop / apps/desktop-electron. See
# `docs/plans/phase-2.21-host-bridge-unification-plan.md`.
# Historically gated `poly-host-bridge` — the dep is now unconditional
# (used by the client-settings UI), so the feature is a no-op kept only
# for back-compat with apps/* feature lists. Remove once those drop it.
storage-host-bridge = []

[dependencies]
# UI
dioxus = { workspace = true }

# Shared client trait
poly-client = { workspace = true }

# Workspace-wide lint gate — empty library, but its build.rs scans the
# whole workspace on every `cargo check`. See `crates/lint-gate/build.rs`
# and `docs/plans/plan-component-lints.md` §3.2.
poly-lint-gate = { workspace = true }

# UI-lint proc-macros: #[rsx_body_size], #[context_menu], #[connected] +
# #[derive(Connected)]. See `crates/ui-macros/src/lib.rs`.
poly-ui-macros = { workspace = true }

# Shared UI primitive types: UiNoopReason + ui_noop! macro.
# Lives in its own crate because ui-macros is a proc-macro crate and
# cannot export regular types or macro_rules macros.
poly-ui-types = { workspace = true }

# Backend clients (feature-gated)
poly-demo = { workspace = true, optional = true }
poly-stoat = { workspace = true, optional = true }
poly-matrix = { workspace = true, optional = true }
poly-discord = { workspace = true, optional = true }
poly-teams = { workspace = true, optional = true }
poly-server-client = { workspace = true, optional = true }
poly-hackernews = { workspace = true, optional = true }
poly-lemmy = { workspace = true, optional = true }
poly-github = { workspace = true, optional = true }
poly-forgejo = { workspace = true, optional = true }
poly-reddit = { workspace = true, optional = true }

# Crypto
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
bip39 = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }

# i18n
fluent-bundle = { workspace = true }
fluent-syntax = { workspace = true }
unic-langid = { workspace = true }
sys-locale = { workspace = true }

# Sync client
reqwest = { workspace = true }

# Direct host-bridge transport for client-settings UI (no chat-mcp hop).
# On wasm32 the `web-direct` feature points at `window.location.origin`
# (same port as the fullstack server hosting the UI). On native shells it
# defaults to the loopback bridge URL — all in-tree shells override that
# via their own bridge client, so the settings UI works in every config.
poly-host-bridge = { workspace = true, features = ["web-direct"] }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
pulldown-cmark = { workspace = true }
ammonia = { workspace = true }

# Audio processing — RNNoise noise cancellation (pure Rust, wasm32-compatible).
# Phase 1: toggle in UI; Phase 3: wire to WebAudio AudioWorklet.
# See docs/phase-voice-plan.md DECISION(V-4).
nnnoiseless = { workspace = true }

# Audio device abstraction — Phase A of plan-voice-video-calls.md.
# Used by the Phase J device-picker UI to enumerate and switch I/O devices.
poly-audio-backend = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# Native-only: SQLite by default, SurrealDB when `storage-surreal` is enabled.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlite = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true, features = ["kv-surrealkv"] }
poly-plugin-host = { workspace = true }
poly-server-client = { workspace = true, optional = true, features = [
    "native",
] }

# WASM-only: IndexedDB + getrandom JS backend forwarding + poly-server HTTP client.
# rand_core 0.6 (aead, ed25519-dalek) and rand 0.10 each pull a different getrandom
# semver line; both need their WASM JS backend feature enabled or they fail to compile.
# These aliases are defined once in the workspace; no version numbers live here.
[target.'cfg(target_arch = "wasm32")'.dependencies]
indexed_db_futures = { workspace = true }
getrandom02-js = { workspace = true }
getrandom04-wasm = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
poly-server-client = { workspace = true, optional = true, features = [
    "wasm-http",
] }
# WASM-safe timer for `BackendHandleExt::read_with_timeout` — tokio::time is
# unavailable on wasm32-unknown-unknown (Instant::now() panics), so the
# helper races the read future against gloo_timers::future::TimeoutFuture.
# See `crates/core/src/client_manager_timeout.rs`.
gloo-timers = { version = "0.3", features = ["futures"] }

[lints]
workspace = true
