[package]
name = "poly-host-bridge"
description = "Host-API bridge protocol — exposes WIT host-api operations (exec-command, http-request, …) over HTTP JSON for the dioxus WASM target. Native shells (Wry, Electron, future iOS/Android) bind a /host endpoint that speaks this protocol; client code (e.g. WASM-side messenger plugins) calls it through this crate's typed client."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[features]
# Default: on wasm32, `HttpClient::new()` routes through the native shell's
# /host bridge. This feature flips wasm32 to use reqwest/browser-fetch directly
# — required for apps/web which runs in a real browser with no native shell.
web-direct = []

# video: enables the /host/video/* H.264 encode/decode endpoints and the
# VideoBridgeClient typed wrapper. Default OFF — openh264-rs compiles Cisco's
# reference encoder from C source (~30s extra build time) and is only needed
# when the native video-backend is in use.
#
# PATENT: uses openh264 features = ["libloading"], which loads Cisco's prebuilt
# binary at runtime and carries Cisco's MPEG-LA patent grant for redistribution.
# Royalty-free alternative: AV1 via rav1e/dav1d if patent-grant terms ever shift.
# See docs/dev/video-codec-strategy.md for the full tradeoff analysis.
video = ["dep:openh264", "dep:axum"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
# reqwest is the wasm-and-native HTTP client used to call the bridge endpoint
# AND it backs the Direct transport in the `http` module on native.
reqwest = { workspace = true }
# Bytes are the public body type returned from `http::Response`.
bytes = "1"
# Used by RequestBuilder::form/query for x-www-form-urlencoded encoding.
serde_urlencoded = "0.7"

# Native: subprocess + HTTP server-side dispatch needs tokio process / fs.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["process", "rt-multi-thread"] }

# openh264 — H.264 encode/decode via Cisco's reference implementation.
# Only compiled when the `video` feature is enabled and target is non-wasm.
# Uses the `libloading` feature: loads Cisco's prebuilt binary at runtime,
# which carries Cisco's MPEG-LA patent grant for redistribution.
openh264 = { version = "0.9", features = ["libloading"], optional = true }

# axum is needed by video.rs handlers (State extractor, StatusCode, IntoResponse).
# It is already a dep of poly-host/apps/desktop-web but not of this crate itself.
# We add it here gated to non-wasm + video so the router can be constructed
# without requiring callers to pull in axum separately.
axum = { workspace = true, optional = true }

# WASM: read `window.location.origin` so the default bridge URL points at the
# same origin that served the WASM bundle (fullstack apps/web / apps/desktop /
# apps/desktop-electron all host `/host/*` on their own port). Without this the
# client would fall back to `http://127.0.0.1:9333`, which is an unreachable
# cross-origin and breaks F5 persistence in the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["Window", "Location"] }

[dev-dependencies]
# Used in tests/video.rs for the `oneshot` request helper.
tower = { workspace = true, features = ["util"] }
# axum body utilities needed in tests.
axum = { workspace = true }

[lints]
workspace = true
